[package]
name = "morph_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#faer = "~0.16"
image = "~0.24"
#nalgebra = { version = "~0.32", features = [] }
ndarray = { version = "~0.15", features = ["approx"] }
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
rand = "~0.8"
rfd = "~0.12"