[package]
name = "morph_tool"
version = "0.1.0"
edition = "2021"

[lib]
name = "morph_tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "egui_frontend"
path = "src/egui_frontend/main.rs"
required-features = ["egui_frontend",]

[[bin]]
name = "minifb_frontend"
path = "src/minifb_frontend/main.rs"
required-features = ["minifb_frontend"]

[[bin]]
name = "fltk_frontend"
path = "src/fltk_frontend/main.rs"
required-features = ["fltk_frontend"]

[[bin]]
name = "speedy_frontend"
path = "src/speedy_frontend/main.rs"
required-features = ["speedy_frontend"]

[features]
egui_frontend = ["egui", "egui_tiles", "eframe", "epaint", "egui_extras"]
minifb_frontend = ["minifb", ]
fltk_frontend = ["fltk", ]
speedy_frontend = ["speedy2d",]

[dependencies]
anyhow = "~1.0"
env_logger = "0.10.1"
#faer = "~0.16"
image = "~0.24"
imageproc = "~0.23"
log = "0.4"
ndarray = { version = "~0.15", features = ["approx"] }
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] }
rand = "~0.8"
rfd = "~0.12"
serde = { version = "1", features = ["derive"] }
#video-rs = { version = "~0.5", features = ["ndarray"] }

# Egui:
egui = { version = "~0.24", optional = true }
egui_extras = { version = "*", optional = true, features = ["all_loaders"] }
egui_tiles = { version = "~0.4", optional = true }
eframe = { version = "~0.24", optional = true, default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
epaint = { version = "~0.24", optional = true }

# Minifb:
minifb = { version = "~0.25", optional = true }

# FLTK:
fltk = { version = "~1.4", optional = true, features = ["fltk-bundled",] }

# Speedy:
speedy2d = { version = "~2.0", optional = true }

# Optimizations:
[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2